--- a/analysis.yml
+++ b/analysis.yml
@@ -44,3 +44,4 @@ dependencies:
   - bioconductor-biostrings # used in DADA2 tutorial OTU tabel
   - r-cca # used in canonical correspondence analysis
   - r-ccp # test for canonical correspondence analysis
+  - r-compositions # used for clr transformation
